# wikipedia-markdown

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  borrar.md  cli.py  config.yaml  cosas_comentar.md  prompts.yaml  pyproject.toml  queries  run.py  run_config.yaml
llm_comparison/: borrar.md  notebook.ipynb
llm_comparison/long/: base.md  deepseek_v3.md  gpt4o_mini.md  llama_1b.md  llama_3b.md  llama_8b.md  ministral_8b.md  nemo_12b.md
llm_comparison/short/: base.md  deepseek_v3.md  gpt4o_mini.md  llama_1b.md  llama_3b.md  llama_8b.md  ministral_8b.md  nemo_12b.md
notebooks/: adobe_base.md  april_base.md  bobby_base.md  borrar.ipynb  borrar.md  clean_markdown.ipynb  code_blocks.ipynb  explore_markdown_formatted.ipynb  openai_batch_api.ipynb  tables.ipynb  tables_wtp.ipynb  wikipedia.ipynb
notebooks/comparativa_deepseek/: april.md  bobby.md
notebooks/comparativa_gpt4/: adobe_v2.md  april_v1.md  april_v2.md  bobby_v2.md
notebooks/old/: canada_table_error.ipynb  explore_markdown_formatted.ipynb  headers.ipynb  split_titles.ipynb  table_bar_header.ipynb  tables.ipynb
src/: download_wiki_file.py  format_articles.py  format_llm.py  format_llm_old.py  format_markdown.py  parse_wiki_file.py  parse_wiki_file_parallel_tests.py
src/utils/: database.py  parallel.py  tokenizer.py  wiki_table.py  yaml.py
src/wikipedia_markdown/: clean_markdown.py  cli.py  download_wiki_file.py  format_markdown.py  parse_wiki_file.py
src/wikipedia_markdown/clean_markdown/: openrouter.py
src/wikipedia_markdown/openai_batch/: check.ipynb  check_batch_job.py  check_batch_jobs.py  create_batch_job.py  create_batch_jobs.py  download_batch_jobs.py  insert_batch_results_db.py  prepare_batch_files.py  run.py
src/wikipedia_markdown/utils/: database.py  wiki_table.py  yaml.py
